2001-02-13  Adam Fedor  <fedor@gnu.org>

	* Version: 0.9.1

2001-02-12  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* target.make (OBJC_CLASS_SECTION): define class section in obj file.
	* framework.make: fixed to support various object section.

2000-02-11 Manuel Guesdon <mguesdon@orange-concept.com>

	common.make: added $(FOUNDATION_LIBRARY_DEFINE) to AUXILIARY_CPPFLAGS
	
2001-02-08 Richard Frith-Macdonald <rfm@gnu.org>

	Fix by David Wetzel to framework.make
	if($$2 == "R") changed to if($$2 == "D")

Tue Feb  6 16:59:20 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	Javadoc support added.
	* common.make (JAVADOC): Set it. 
	* rules.make (ALL_JAVADOCFLAGS): Set it.  (%.build): Pass
	JAVADOC_FILES and JAVADOC_SOURCEPATH down.
	* documentation.make: Added support for javadoc documentation.
	
Sun Feb  4 23:19:38 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* debian/*: Applied patches by Matthias Klose <doko@debian.org> to
	make it more debian compliant.

2001-01-30  Adam Fedor  <fedor@gnu.org>

	* configure.in: Redo setting prefix again! set root_prefix to
	base directory (typically /usr/GNUstep) 
	* GNUmakefile.in: Update for new prefix, root_prefix, GNUSTEP_ROOT
	* GNUstep.csh.in: Likewise.
	* GNUstep.sh.in: Likewise.

Mon Jan 29 23:38:25 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* debian: New directory.
	* debian/changelog: New file.
	* debian/control: New file.
	* debian/copyright: New file.
	* debian/rules: New file.

2001-01-29  Adam Fedor  <fedor@gnu.org>

	* configure.in: Correct setting of prefix and GNUSTEP_ROOT.
	* GNUmakefile.in: Replace GNUSTEP_PREFIX with GNUSTEP_ROOT

Mon Jan 29 16:57:53 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* GNUmakefile.in (install): Create the
	$GNUSTEP_MAKEFILES/Additional directory.
	* brain.make: Moved base, gui, xgps and xdps specific code into
	makefiles created and installed into $GNUSTEP_MAKEFILES/Additional
	by the base, gui, xgps and xdps packages themselves.
	* common.make: Include all makefiles found in